--- a/styles.css
+++ b/styles.css
@@ -49,12 +49,6 @@ body {
   margin: 0;
 }
 
-img {
-  max-width: 100%;
-  height: auto;
-  display: block;
-}
-
 h1 {
   font-weight: 400;
 }
@@ -67,6 +61,18 @@ h1 span {
   font-weight: 700;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+
+a {
+  font-weight: var(--fw-700);
+  text-decoration: none;
+  color: var(--clr-accent-500);
+}
+
 .container {
   padding: 0 var(--spacer);
   max-width: 70rem;
@@ -76,6 +82,7 @@ h1 span {
 .split-gap {
   display: flex;
   flex-direction: column;
+  /* gap: var(--spacer); */
 }
 
 .split-gap > * + * {
@@ -85,6 +92,11 @@ h1 span {
 @media (min-width: 40em) {
   .split-gap {
     flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .split-gap > * {
+    flex-basis: 100%;
   }
 
   .split-gap > * + * {
@@ -127,6 +139,10 @@ h1 span {
   background: var(--clr-accent-400);
 }
 
+.a-center {
+  align-items: center;
+}
+
 /* layout */
 section {
   padding: 4.125rem 0;
@@ -138,7 +154,50 @@ section {
   }
 }
 
+/* navigation */
+header {
+  position: relative;
+  padding: var(--spacer) 0;
+  z-index: 1000;
+}
+
+@media (min-width: 40em) {
+  header {
+    position: sticky;
+    top: 0;
+  }
+}
+
+.primary-nav {
+  margin: 1rem 0;
+}
+
+.nav-list {
+  display: flex;
+  justify-content: center;
+  gap: 2em;
+}
+
+.nav-list a {
+  font-size: 1rem;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+
+  color: var(--clr-neutral-100);
+}
+
 /* individual */
+.hero img {
+  transform: translateY(2em);
+}
+
+@media (min-width: 40em) {
+  .hero {
+    padding: 0;
+  }
+}
+
 .join-now li::before {
   content: '';
   display: block;
