--- a/style.css
+++ b/style.css
@@ -1,19 +1,39 @@
 :root {
-  --spacer: 1rem;
-  --spacer-01: 2rem;
+  --ff-sans: 'IBM Plex Sans', sans-serif;
+  --ff-serif: 'IBM Plex Serif', serif;
+
+  /* small screen font-sizes */
+  --fs-200: 0.75rem;
+  --fs-300: 1rem;
+  --fs-400: 1.25rem;
+  --fs-500: 1.375rem;
+  --fs-600: 1.75rem;
+  --fs-900: 2.125rem;
+
+  --fw-200: 200;
+  --fw-300: 300;
+  --fw-400: 400;
+  --fw-700: 700;
 
   --clr-neutral-100: #fff;
-  --clr-neutral-400: #333;
-  --clr-neutral-900: #111;
-  --clr-primary-400: #3c1500;
+  --clr-neutral-200: #eef1f6;
+  --clr-neutral-300: #a9afbc;
+  --clr-neutral-400: #737b8c;
+  --clr-neutral-500: #434956;
+  --clr-neutral-900: #020203;
 
-  --fw-700: 900;
-  --fw-400: 300;
+  --clr-primary-300: #f3f7ff;
+  --clr-primary-400: #8ea8da;
 
-  --fs-400: 1.125rem;
-  --fs-500: 1.5rem;
-  --fs-600: 2.25rem;
-  --fs-700: 3rem;
+  --br: 1rem;
+}
+
+@media (min-width: 40em) {
+  :root {
+    --fs-500: 1.75rem;
+    --fs-600: 2.125rem;
+    --fs-900: 4.25rem;
+  }
 }
 
 /* reset */
@@ -22,36 +42,145 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-body,
 h1,
+.h1,
 h2,
+.h2,
 h3,
-p {
-  margin: 0;
+.h3,
+h4,
+.h4,
+h5,
+.h5,
+h6,
+.h6 {
+  line-height: 1;
+}
+
+ul[class],
+ol[class] {
+  list-style: none;
+}
+
+input,
+textarea,
+select,
+button {
+  font: inherit;
+  outline: none;
 }
 
 img {
-  display: block;
   max-width: 100%;
   height: auto;
+  display: block;
+  border-radius: var(--br);
 }
 
-/* Utility classes */
-.bg-dark {
-  background: var(--clr-primary-400);
-  color: var(--clr-neutral-100);
+body {
+  font-family: var(--ff-sans);
+  font-size: var(--fs-400);
+  font-weight: 300;
+  line-height: 1.3;
+
+  padding: 1.5rem;
 }
 
-.flow-content > * + * {
-  margin-top: var(--flow-space, var(--spacer));
+/* General styling */
+.btn {
+  display: inline-block;
+  border: none;
+  cursor: pointer;
+
+  font-size: var(--fs-300);
+  font-weight: var(--fw-700);
+  font-family: var(--ff-sans);
+  text-decoration: none;
+
+  color: var(--clr-neutral-900);
+  background: none;
+}
+
+.btn::after {
+  content: '\203A';
+  font-weight: var(--fw-300);
+  margin-left: 1em;
+}
+
+.btn:hover,
+.btn:focus {
+  color: var(--clr-primary-400);
+}
+
+/* General Typography styling */
+
+h1,
+h2,
+h3,
+.section-subtitle,
+.text-serif {
+  font-family: var(--ff-serif);
+  font-weight: var(--fw-200);
+}
+
+a {
+  font-size: var(--fs-300);
+  font-weight: var(--fw-700);
+  color: var(--clr-neutral-900);
+}
+
+a:hover,
+a:focus {
+  color: var(--clr-primary-400);
+}
+
+.text-500 {
+  font-size: var(--fs-500);
+}
+
+.page-title {
+  font-size: var(--fs-900);
+}
+
+.page-intro {
+  font-size: var(--fs-600);
+}
+
+.section-title {
+  font-size: var(--fs-600);
+  color: var(--clr-neutral-400);
+}
+
+.section-subtitle {
+  font-size: var(--fs-600);
+}
+
+/* General layout styling */
+section {
+  padding: 2.5rem 0;
+}
+
+@media (min-width: 40em) {
+  section {
+    padding: 3.5rem 0;
+  }
 }
 
 .container {
-  padding: 0 var(--spacer);
-  max-width: 68rem;
+  max-width: 50rem;
   margin: 0 auto;
+}
+
+.intro {
+  --flow-spacer: 2em;
+}
+
+.flow-content > * + * {
+  margin-top: var(--flow-spacer, 1em);
 }
 
 .split {
@@ -59,8 +188,12 @@ img {
   flex-direction: column;
 }
 
+.split > * {
+  flex-basis: 100%;
+}
+
 .split > * + * {
-  margin: calc(var(--spacer) * 3) 0 0 0;
+  margin: 4rem 0 0 0;
 }
 
 @media (min-width: 40em) {
@@ -68,68 +201,182 @@ img {
     flex-direction: row;
   }
 
-  .split > * {
-    /* Why flex-basis: 100% still stand out at once row?
-      - Because flex-shrink: 1 is default and flex-wrap: nowrap is default
-      - So three element still stand out at once row and apply flex-shrink each element
-      - That's why when we set flex-basis: 100% three element still stand out at once row
-    */
-    flex-basis: 100%;
-  }
-
   .split > * + * {
-    margin: 0 0 0 var(--spacer);
+    margin: 0 0 0 2.5rem;
   }
 }
 
-/* general styling */
-
-body {
-  font-family: 'Roboto', sans-serif;
-  font-weight: var(--fw-300);
-  font-size: var(--fs-400);
-  color: var(--clr-neutral-400);
-  line-height: 1.6;
+.xl-space {
+  margin-top: 5rem;
 }
 
-h1,
-h2,
-h3 {
-  font-weight: var(--fw-700);
-  line-height: 1.1;
+/* header section */
+.primary-header {
+  display: flex;
+  flex-direction: column;
+
+  min-height: 50vh;
+  padding: 2rem;
+  border-radius: var(--br);
+
+  background-color: var(--clr-primary-400);
+  background-size: cover;
 }
 
-h1 {
-  font-size: var(--fs-700);
+.page-home .primary-header {
+  background-image: url(img/hero.jpg);
+  background-position: center center;
 }
-h2 {
-  font-size: var(--fs-600);
+
+.primary-nav {
+  position: fixed;
+  bottom: 0.5em;
+  left: 0.5em;
+  right: 0.5rem;
+
+  font-family: var(--ff-serif);
+  background: var(--clr-neutral-900);
+  border-radius: var(--br);
 }
-h3 {
+
+.primary-nav ul {
+  display: flex;
+  justify-content: space-around;
+  padding: 1em 0;
+}
+
+.primary-nav li {
+  line-height: 0;
+}
+
+.primary-nav a {
+  color: var(--clr-neutral-200);
+  text-decoration: none;
+}
+
+@media (min-width: 40em) {
+  .primary-nav {
+    position: static;
+    background: transparent;
+  }
+
+  .primary-header__inner {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .primary-nav ul {
+    padding: 0;
+  }
+
+  .primary-nav li {
+    margin-left: 2em;
+  }
+
+  .primary-nav a {
+    color: inherit;
+    text-decoration: none;
+  }
+}
+
+/* recent-articles section */
+.article-preview h3 {
   font-size: var(--fs-500);
 }
 
-/* general layout */
-section {
-  padding: 10rem 0;
+.article-preview .info {
+  display: flex;
+  font-size: var(--fs-200);
+  font-weight: var(--fw-400);
+  /* gap: 2rem; */
+
+  color: var(--clr-neutral-400);
 }
 
-/* components */
-.btn {
-  display: inline-block;
-  cursor: pointer;
-  text-decoration: none;
-  font-weight: var(--fw-700);
-  background: var(--clr-primary-400);
-  color: var(--clr-neutral-100);
-  padding: 0.5em 1.25em;
+.article-preview .info > * + * {
+  /* space between elements. Could use instead of gap of flex */
+  margin-left: 2rem;
 }
 
-.card {
-  padding: var(--spacer);
-  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.2);
+/* call-to-action section */
+.call-to-action form {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+
+  margin-top: 3rem;
 }
 
-.section-one {
-  background: url(img/hero-bg.jpg) no-repeat center center / cover;
+.call-to-action form > div {
+  flex: 1 1 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
 }
+
+.call-to-action label {
+  font-size: var(--fs-300);
+  font-weight: var(--fw-400);
+}
+
+.call-to-action input {
+  width: 100%;
+  border: none;
+  border-bottom: 2px solid var(--clr-neutral-300);
+}
+
+.call-to-action input:focus {
+  border-color: var(--clr-primary-400);
+}
+
+.call-to-action input::placeholder {
+  color: var(--clr-neutral-300);
+}
+
+.call-to-action button {
+  text-align: left;
+}
+
+@media (min-width: 40em) {
+  .call-to-action form {
+    flex-direction: row;
+  }
+
+  .call-to-action button {
+    text-align: center;
+  }
+}
+
+/* primary-footer section */
+footer {
+  padding-bottom: 2em;
+}
+
+.primary-footer__inner {
+  --border: 2px solid var(--clr-neutral-200);
+
+  margin: 2em 0;
+  padding: 3em 0;
+  border-top: var(--border);
+  border-bottom: var(--border);
+}
+
+.footer-nav {
+  display: flex;
+}
+
+.footer-nav > * + * {
+  margin-left: auto;
+}
+
+.footer-social {
+  display: flex;
+  justify-content: space-between;
+  gap: 2em;
+}
+
+.footer-social a {
+  font-weight: var(--fw-200);
+}
+
+/* add styles of blog page */
