--- a/style.css
+++ b/style.css
@@ -172,6 +172,7 @@ section {
 
 .container {
   max-width: 50rem;
+  width: 100%;
   margin: 0 auto;
 }
 
@@ -234,6 +235,8 @@ section {
   left: 0.5em;
   right: 0.5rem;
 
+  z-index: 1000;
+
   font-family: var(--ff-serif);
   background: var(--clr-neutral-900);
   border-radius: var(--br);
@@ -280,8 +283,48 @@ section {
 }
 
 /* recent-articles section */
+
+.article-preview {
+  position: relative;
+  z-index: 0;
+}
+
 .article-preview h3 {
   font-size: var(--fs-500);
+}
+
+.article-preview a {
+  display: block;
+
+  font-size: var(--fs-400);
+  font-weight: var(--fw-300);
+  text-decoration: none;
+}
+
+.article-preview a:hover,
+.article-preview a:focus {
+  color: inherit;
+}
+
+.article-preview a::before {
+  --offset: -0.5em;
+
+  content: '';
+  position: absolute;
+  top: var(--offset);
+  bottom: var(--offset);
+  left: var(--offset);
+  right: var(--offset);
+
+  z-index: -1;
+  border-radius: var(--br);
+  box-shadow: 0 0.75rem 1.25rem rgba(0, 0, 0, 0.15);
+  transition: opacity 0.35s ease;
+  opacity: 0;
+}
+
+.article-preview:hover a::before {
+  opacity: 1;
 }
 
 .article-preview .info {
@@ -380,3 +423,110 @@ footer {
 }
 
 /* add styles of blog page */
+.page-blog .primary-header {
+  background-image: url(img/blog.jpg);
+  background-position: left center;
+}
+
+.page-blog .primary-header .container {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.page-blog .primary-header h1 {
+  max-width: 12ch;
+  text-align: left;
+}
+
+.secondary-navigation {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 2rem 0;
+}
+
+.secondary-navigation .btn {
+  font-size: var(--fs-200);
+}
+
+.categories {
+  display: flex;
+  gap: 1rem;
+}
+
+.categories button {
+  font-size: var(--fs-200);
+  text-transform: uppercase;
+
+  display: flex;
+  align-items: center;
+
+  border: 0;
+  cursor: pointer;
+  background: transparent;
+}
+
+@media (min-width: 40em) {
+  .secondary-navigation .btn {
+    font-size: var(--fs-300);
+  }
+
+  .categories {
+    gap: 2rem;
+  }
+
+  .categories button {
+    font-size: var(--fs-300);
+  }
+}
+
+.article-grid {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 3em 2em;
+}
+
+.article-grid > * {
+  grid-column: 1/ -1;
+}
+
+@media (min-width: 30em) {
+  .article-grid > *:not(:first-child) {
+    grid-column: span 3;
+  }
+}
+
+@media (min-width: 40em) {
+  .article-grid > *:first-child {
+    --flow-spacer: 0;
+    grid-column: 1/ -1;
+  }
+
+  .article-grid > .article-preview:first-child {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: min-content min-content 1fr;
+    gap: 1em 2em;
+  }
+
+  .article-grid > .article-preview:first-child img {
+    grid-row: span 3;
+    height: 17.5rem;
+  }
+
+  .article-grid > *:nth-child(2),
+  .article-grid > *:nth-child(3) {
+    grid-column: span 3;
+  }
+
+  .article-grid > *:nth-child(4),
+  .article-grid > *:nth-child(5),
+  .article-grid > *:nth-child(6) {
+    grid-column: span 2;
+  }
+
+  .article-grid > *:nth-child(7),
+  .article-grid > *:nth-child(8) {
+    grid-column: span 3;
+  }
+}
