--- a/style.css
+++ b/style.css
@@ -1,95 +1,272 @@
 :root {
-  --clr-neutral-100: #fff;
-  --clr-neutral-400: #474554;
-  --clr-neutral-900: #000;
-  --clr-primary-200: #bac9e8;
-  --clr-primary-300: #3c7dff;
-  --clr-primary-400: #0044cc;
-  --clr-primary-500: #0c1832;
-
-  --ff-base: 'IBM Plex Serif', serif;
-  --ff-accent: 'Poppins', sans-serif;
+  --clr-primary: #ffffff;
+  --clr-secondary: #030303;
+  --clr-accent: #ff3369;
+  --bg-base: #e5e5e5;
+  --br: 0.5rem;
 }
 
 *,
 *::before,
 *::after {
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
 }
 
 body {
+  font-family: 'Inter', sans-serif;
   font-size: 1.0625rem;
-  font-family: var(--ff-base);
-  line-height: 1.65;
-  background-color: var(--clr-primary-200);
-  padding: 4rem;
+  font-weight: 400;
+  line-height: 1.75rem;
+
+  color: var(--clr-secondary);
+  background-color: var(--bg-base);
+  margin: 0;
 }
 
-.section-title {
-  font-family: var(--ff-accent);
-  font-size: 1.75rem;
+h1 {
+  font-family: 'Baloo 2', sans-serif;
+  font-size: 4.25rem;
+  font-weight: 700;
+  letter-spacing: -0.0425rem;
+  line-height: 3.5rem;
+
+  margin: 0;
 }
 
-.cta {
-  --color: var(--clr-neutral-900);
-  --bg: var(--clr-neutral-100);
-
-  max-width: 40rem;
-  margin: 10rem auto;
-  padding: 5rem;
-  border-radius: 2.5rem;
-
-  color: var(--color);
-  background: var(--bg);
+h2 {
+  margin: 0;
+  font-family: 'Baloo 2', sans-serif;
+  font-size: 2.125rem;
+  font-weight: 800;
+  line-height: 2.5rem;
+  letter-spacing: -0.0425rem;
 }
 
-.btn {
-  display: inline-block;
-  padding: 0.625rem 1.5rem;
-  margin-top: 1.5rem;
-  border-radius: 0.625rem;
-  cursor: pointer;
+@media (min-width: 50em) {
+  h1 {
+    font-size: 6rem;
+    font-weight: 800;
+    line-height: 7.5rem;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.24);
+  }
 
-  font-family: var(--ff-accent);
+  h2 {
+    font-size: 2.125rem;
+    font-weight: 800;
+    line-height: 2.5rem;
+    letter-spacing: -0.0425rem;
+  }
+}
+
+img {
+  max-width: 100%;
+  display: block;
+  height: auto;
+}
+
+a {
   text-decoration: none;
-  text-transform: uppercase;
-  line-height: 1;
+  color: inherit;
 }
 
-.btn-primary {
-  background: var(--bg-primary, var(--clr-primary-400));
-  color: var(--clr-primary, var(--clr-neutral-100));
+ul,
+ol {
+  padding-inline-start: 0;
 }
 
-.btn-secondary {
-  background: var(--bg-secondary, var(--clr-neutral-400));
-  color: var(--clr-secondary, var(--clr-neutral-100));
+.text-white {
+  color: var(--clr-primary);
 }
 
-.btn-outline {
-  color: var(--clr-outline, var(--clr-primary-400));
-  padding: calc(0.625rem-2px) calc(1.5rem-2px);
-  border: 2px solid var(--clr-border, var(--clr-primary-400));
+.text-accent {
+  color: var(--clr-accent);
+}
+
+.bg-white {
+  background-color: var(--clr-primary);
 }
 
 .bg-accent {
-  --color: var(--clr-neutral-100);
-  --bg: var(--clr-primary-400);
-  --clr-primary: var(--clr-primary-300);
-  --bg-primary: var(--clr-neutral-100);
-  --clr-secondary: var(--clr-neutral-100);
-  --bg-secondary: var(--clr-neutral-900);
-  --clr-outline: var(--clr-neutral-100);
-  --clr-border: var(--clr-neutral-100);
+  background-color: var(--clr-accent);
 }
 
-.bg-dark {
-  --color: var(--clr-neutral-100);
-  --bg: var(--clr-primary-500);
-  --clr-secondary: var(--clr-primary-300);
-  --bg-secondary: var(--clr-neutral-100);
-  --clr-outline: var(--clr-neutral-100);
-  --clr-border: var(--clr-neutral-100);
+/* header */
+header {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+
+  position: absolute;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-around;
+  gap: 0.5rem;
+  border-radius: var(--br);
+
+  position: fixed;
+  bottom: 0.5rem;
+  left: 1rem;
+  right: 1rem;
+  z-index: 1000;
+
+  color: var(--clr-primary);
+  background: var(--clr-secondary);
+}
+
+@media (min-width: 50em) {
+  header {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    position: static;
+    padding: 0.5rem 4rem;
+    background: var(--clr-primary);
+  }
+
+  .nav {
+    position: static;
+    margin: 0;
+    color: inherit;
+    background: transparent;
+  }
+}
+
+.nav li {
+  list-style-type: none;
+  padding: 0.5rem;
+}
+
+.nav li > * {
+  font-family: 'Baloo 2', sans-serif;
+  font-size: 1rem;
+  font-weight: 700;
+  line-height: 1.25rem;
+  text-transform: uppercase;
+}
+
+/* banner */
+.banner-content {
+  text-align: left;
+  padding: 10rem 2rem;
+  background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)),
+    url(assets/hero.jpg) no-repeat right -10em center / cover;
+}
+
+.banner-content > p {
+  font-size: 1.75rem;
+  font-weight: 400;
+  line-height: 2rem;
+  letter-spacing: -0.035rem;
+
+  margin: 0;
+}
+
+.quote {
+  margin: 0;
+  padding: 2.5rem 1.5rem;
+
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 2.5rem;
+}
+
+@media (min-width: 50em) {
+  .banner-content {
+    padding: 10rem 8rem;
+    background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)),
+      url(assets/hero.jpg) no-repeat center center / cover;
+  }
+
+  .banner-content > p {
+    font-size: 2.125rem;
+    font-weight: 400;
+    line-height: 2.5rem;
+    letter-spacing: -0.0425rem;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.24);
+  }
+
+  .quote {
+    padding: 4rem 8rem 10rem;
+  }
+}
+
+/* section */
+main {
+  padding: 2.5rem 1.5rem;
+}
+
+main > * + * {
+  padding: 2.5rem 0;
+}
+
+main > *:first-child {
+  border-bottom: 1px solid var(--bg-base);
+}
+
+.col-01 > * + * {
+  padding-top: 2.5rem;
+}
+
+ul,
+ol {
+  padding-left: 1em;
+}
+
+ul > * + * {
+  padding-top: 0.5rem;
+}
+
+ol > * + * {
+  padding-top: 1rem;
+}
+
+@media (min-width: 50em) {
+  main {
+    margin: -4rem 4rem 0;
+    padding: 5rem 4rem;
+    border-top-left-radius: var(--br);
+    border-top-right-radius: var(--br);
+
+    display: flex;
+    gap: 1rem;
+  }
+
+  main > *:first-child {
+    flex: 1 1 40%;
+    order: 2;
+
+    padding-left: 3rem;
+    border-top: none;
+    border-left: 1px solid var(--bg-base);
+  }
+
+  .col-01 {
+    padding: 0;
+    flex: 1 1 60%;
+  }
+}
+
+/* footer */
+footer {
+  margin: 0;
+}
+
+footer p {
+  margin: 0;
+  padding: 2.5rem 1.5rem 6rem;
+}
+
+@media (min-width: 50em) {
+  footer {
+    margin: 0 4rem 4rem;
+    border-bottom-left-radius: var(--br);
+    border-bottom-right-radius: var(--br);
+  }
+
+  footer p {
+    padding: 2.5rem 4rem;
+  }
 }
