--- a/css/style.css
+++ b/css/style.css
@@ -1,63 +1,22 @@
-header {
-  background: black;
-  color: white;
-  padding: 2rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.container {
+  padding: 0 2rem;
+  max-width: 65rem;
+  margin: 0 auto;
 }
 
-.flex-layout {
-  min-height: 100vh;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 2em;
-}
-
-header {
-  flex-basis: 15rem;
-  flex-grow: 1;
-}
-
-main {
-  flex-basis: 60%;
-  padding: 2em;
-  flex-grow: 9999;
-}
-
-main > * {
-  max-width: 60rem;
-}
-
-/* add fixed positioning */
-
-header > img {
-  position: fixed;
-}
-
-header > nav {
-  position: fixed;
-  top: 6rem;
-}
-
-header > nav > ul {
+.even-columns {
   display: flex;
   flex-direction: column;
   gap: 1em;
 }
 
-@media (max-width: 699px) {
-  header > img {
-    position: static;
-  }
-
-  header > nav {
-    position: static;
-  }
-
-  header > nav > ul {
-    display: flex;
+@media (min-width: 60em) {
+  .even-columns {
     flex-direction: row;
-    gap: 1em;
   }
+}
+
+.even-columns > * {
+  flex-basis: 100%;
+  border: 2px solid black;
 }
