--- a/css/general-styling.css
+++ b/css/general-styling.css
@@ -9,16 +9,12 @@
 
 /* Remove default margin */
 body,
+h1,
 h2,
 h3,
 h4,
 p {
   margin: 0;
-}
-
-h1 {
-  margin: 5rem 0;
-  text-align: center;
 }
 
 /* Set body defaults */
@@ -42,4 +38,50 @@ button,
 textarea,
 select {
   font: inherit;
+}
+
+.flow > * + * {
+  margin-top: var(--flow-space, 1em);
+}
+
+header {
+  background: black;
+  color: white;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.logo {
+  width: 10rem;
+  margin-bottom: 1rem;
+}
+
+nav ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav li {
+  margin: 0 1em;
+}
+
+nav a {
+  color: inherit;
+}
+
+nav a:hover,
+nav a:focus {
+  color: yellowgreen;
+}
+
+.card {
+  border: 2px solid black;
+  padding: 1.5em;
+  margin-bottom: 1em;
 }
