--- a/css/style.css
+++ b/css/style.css
@@ -21,8 +21,24 @@ main {
 }
 
 aside {
-  flex-basis: 20rem;
-  flex-grow: 1;
   border: 4px solid black;
   padding: 1em;
+}
+
+.adaptable-sidebar {
+  flex-basis: 20rem;
+  flex-grow: 1;
+
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1em;
+}
+
+.adaptable-sidebar > * {
+  flex-basis: 100%;
+}
+
+.adaptable-sidebar .card {
+  flex-basis: 1%;
+  flex-grow: 1;
 }
