--- a/css/style.css
+++ b/css/style.css
@@ -1,44 +1,34 @@
-header {
-  margin-bottom: 3rem;
+section {
+  padding: 5em 0;
 }
 
 .container {
   padding: 0 2em;
-  max-width: 75rem;
-  margin: 0 auto;
+  max-width: 90rem;
 }
 
-.content-sidebar {
+.card {
+  width: 300px;
+  border: 3px solid black;
+  padding: 2rem;
+  text-align: center;
+}
+
+.card img {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin: 0 auto 1em;
+}
+
+.grid-ish {
   display: flex;
-  flex-wrap: wrap;
-  align-items: flex-start;
-  gap: 4rem;
-}
-
-main {
-  flex-grow: 9999;
-  flex-basis: 50%;
-}
-
-aside {
-  border: 4px solid black;
-  padding: 1em;
-}
-
-.adaptable-sidebar {
-  flex-basis: 20rem;
-  flex-grow: 1;
-
-  display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 1em;
 }
 
-.adaptable-sidebar > * {
-  flex-basis: 100%;
-}
-
-.adaptable-sidebar .card {
-  flex-basis: 1%;
+.grid-ish > * {
   flex-grow: 1;
 }
