--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,39 @@
-section {
-  padding: 5em 0;
+header {
+  margin-bottom: 3rem;
 }
 
 .container {
   padding: 0 2em;
-  max-width: 90rem;
+  max-width: 75rem;
+  margin: 0 auto;
 }
 
-.card {
-  width: 300px;
-  border: 3px solid black;
-  padding: 2rem;
-  text-align: center;
+.content-sidebar {
+  display: flex;
+  align-items: flex-start;
+  gap: 4rem;
+  flex-wrap: wrap;
 }
 
-.card img {
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  object-fit: cover;
-  margin: 0 auto 1em;
+main {
+  flex-grow: 9999;
+  flex-basis: 60%;
+}
+
+aside {
+  flex-basis: 20rem;
+  flex-grow: 1;
+  border: 4px solid black;
+  padding: 1em;
 }
 
 .grid-ish {
   display: flex;
-  justify-content: center;
   flex-wrap: wrap;
   gap: 1em;
 }
 
 .grid-ish > * {
   flex-grow: 1;
+  flex-basis: 15rem;
 }
